@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-01T01:09:27Z",
+  "timestamp" : "2022-07-01T08:15:30Z",
   "count_outdated" : 369,
   "uniques_outdated" : 199,
-  "count" : 390,
-  "uniques" : 212,
+  "count" : 391,
+  "uniques" : 213,
   "clones" : [
     {
       "timestamp": "2022-06-17T00:00:00Z",
@@ -91,6 +91,13 @@
     },
     {
       "timestamp": "2022-06-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
