@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 1,
   "clones": [
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2022-06-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
