@@ -1,3 +1,10 @@
+2022-07-01T08:15:30Z:
+* notice: last 14d: unq all: 1 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 199 369 / 212 390
+* notice: next accum: outdated-unq outdated-all / unq all: 199 369 / 213 391
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-01]
+
 2022-07-01T01:09:27Z:
 * notice: last 14d: unq all: 1 21
 * notice: prev accum: outdated-unq outdated-all / unq all: 198 367 / 212 389
